--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
 	"version": "0.1.0",
 	"author": "PixelsMatter <hello@pixelsmatter.io>",
 	"dependencies": {
+		"classnames": "^2.2.6",
 		"gatsby": "^2.26.1",
 		"gatsby-image": "^2.5.0",
-		"gatsby-plugin-google-gtag": "^2.8.0",
+		"gatsby-plugin-gdpr-cookies": "^1.0.12",
 		"gatsby-plugin-manifest": "^2.6.1",
 		"gatsby-plugin-offline": "^3.9.0",
 		"gatsby-plugin-preact": "^4.7.0",
@@ -18,6 +19,7 @@
 		"gatsby-plugin-webfonts": "^1.1.4",
 		"gatsby-source-filesystem": "^2.5.0",
 		"gatsby-transformer-sharp": "^2.6.0",
+		"js-cookie": "^2.2.1",
 		"preact": "^10.5.12",
 		"preact-render-to-string": "^5.1.12",
 		"prop-types": "^15.7.2",
