--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"preact-render-to-string": "^5.1.12",
 		"prop-types": "^15.7.2",
 		"react": "^16.14.0",
+		"react-cookie-consent": "^6.2.3",
 		"react-dom": "^16.14.0",
 		"react-helmet": "^6.1.0",
 		"sanitize.css": "^12.0.1",
