Disable offline plugin

--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -2,7 +2,7 @@ name: Lighthouse CI
 on: [push]
 jobs:
     lhci:
-        name: Lighthouse
+        name: Lighthouse CI
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
